EfficiencyCode-rs/tui/src/snapshots/EfficiencyCode_tui__keymap_setup__tests__keymap_debug_view_delayed_hint.snap
---
source: tui/src/keymap_setup.rs
expression: rendered
---
Keypress Inspector
Press any key to see what EfficiencyCode receives. Esc is inspected; Ctrl+C closes.
Still waiting? If nothing changes when you press a key, your terminal is not sending that key to
EfficiencyCode. Only received keys can be assigned as shortcuts.

Waiting for a keypress...
